--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_DB: typescript-koa
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
 
   adminer:
     image: adminer:latest
