--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-router": "^7.0.32",
     "@types/node": "^10.12.0",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.5",
     "rimraf": "^2.6.2",
+    "supertest": "^3.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.0",
